--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "expo": "~47.0.3",
     "expo-splash-screen": "~0.17.4",
     "expo-status-bar": "~1.4.2",
+    "numeral": "^2.0.6",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-select-dropdown": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
