--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "expo": "~47.0.3",
     "expo-splash-screen": "~0.17.4",
     "expo-status-bar": "~1.4.2",
+    "json-sorting": "^1.0.2",
+    "nanoid": "^4.0.0",
     "numeral": "^2.0.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-select-dropdown": "^3.0.1"
+    "react-native-select-dropdown": "^3.0.1",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
